--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </style>
 </head>
 <body >
-    <div id="map" class="relative w-screen h-screen"></div>
+    <div id="map" class="relative w-screen h-screen">To change</div>
     <script>    
         const map = new L.map('map').setView([41.335527, 69.273116], 10)
         L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
