--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OSRM | OpenStreetMap</title>
+
+    <script src="https://cdn.tailwindcss.com"></script>
   
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css" />
@@ -16,7 +18,6 @@
     </style>
 </head>
 <body >
-    <div>Hello world!</div>
     <div id="map" class="relative w-screen h-screen"></div>
     <script>    
         const map = new L.map('map').setView([41.335527, 69.273116], 10)
