--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </style>
 </head>
 <body >
-    <div id="map" class="relative" style="width: 400px; height: 400px;"></div>
+    <div id="map" class="relative w-screen h-screen"></div>
     <script>    
         const map = new L.map('map').setView([41.335527, 69.273116], 10)
         L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
