--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     </style>
 </head>
 <body >
-    <!-- <div id="map" class="relative w-screen h-screen"></div> -->
-    <div style="position:relative;overflow:hidden;">
+    <div id="map" class="relative w-screen h-screen"></div>
+    <!-- <div style="position:relative;overflow:hidden;">
         <a href="https://yandex.uz/maps/10335/tashkent/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Ташкент</a>
         <a href="https://yandex.uz/maps/10335/tashkent/?ll=69.279737%2C41.311151&utm_medium=mapframe&utm_source=maps&z=12" style="color:#eee;font-size:12px;position:absolute;top:14px;">Яндекс Карты — транспорт, навигация, поиск мест</a>
         <iframe src="https://yandex.uz/map-widget/v1/?ll=69.279737%2C41.311151&z=12" width="560" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe>
-    </div>
+    </div> -->
     <script>    
         const map = new L.map('map').setView([41.311162, 69.279712], 15)
         L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
